fixed download modal not showing up

--- a/frontend/src/styles/download_dialog.css
+++ b/frontend/src/styles/download_dialog.css
@@ -25,7 +25,7 @@
   justify-content: center;
   align-items: center;
   
-  z-index: 1000;
+  z-index: 2000;
 }
 
 .dialog-popup {
